updates dependencies and refactors domain
