# domain/entities/src/main/java/uk/co/mruoc/domain/entity/Widget.java
@@ -1,5 +1,6 @@
 package uk.co.mruoc.domain.entity;
 
+import java.time.Instant;
 import java.util.UUID;
 import javax.money.MonetaryAmount;
 import lombok.Builder;
@@ -12,4 +13,5 @@ public class Widget {
     private final UUID id;
     private final String description;
     private final MonetaryAmount cost;
+    private final Instant createdAt;
 }
